# DrakeGPT

./: .gitignore  README.md  pyproject.toml
data/: test_data.pt
model/: BigramLM.pt  BlocksLM.pt  MultiHeadAttentionLM.pt  ResidualBlocksLM.pt  SingleHeadAttentionLM.pt  TransformerLM.pt  bigram.pt  blocks.pt  multi_head_attention.pt  residual_blocks.pt  single_head_attention.pt  transformer.pt
src/: clean_up.py  config.py  data.py  gpt_dev.ipynb  helper.ipynb  inference.py  model.py  model_component.py  preprocessing.py  setup.py  train.py  train_bigram.py  train_scale.ipynb
