[tool.poetry]
name = "myfirstgpt"
version = "0.1.0"
description = ""
authors = ["ChrisTho23 <christophe.thomassin23@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.2.1"
scikit-learn = "^1.4.1.post1"
kaggle = "^1.6.6"
pandas = "^2.2.1"
wandb = "^0.16.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
